# sentry-dart-plugin

./: .craft.yml  .gitignore  .pubignore  CHANGELOG.md  CONTRIBUTING.md  README.md  analysis_options.yaml  check_domain_access.dart  download-sentry-cli.sh  pubspec.yaml
.fvm/: flutter_sdk
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: add-platform-label.yml  dart_plugin.yml  integration-test.yml  integration-tests-sentry-cli.yml  integration-tests.yml  release.yml  update-deps.yml
example/: README.md  readme.md
integration-test/: README.md  integration-test-server-start.sh  integration-test-server.py  pubspec.yaml
integration-test/android/app/src/main/cpp/: CMakeLists.txt  hello_santry.cpp
integration-test/assets/: debug-info-files.json  deploy.json  release.json
integration-test/lib/: main.dart
integration-test/project/: pubspec.yaml
lib/: sentry_dart_plugin.dart
scripts/: bump-version.sh  download-sentry-cli.sh  sentry-cli.properties  update-cli.sh
test/: cli_test.dart  configuration_test.dart  configuration_values_test.dart  configureation_values_test.dart  dart_map_debug_file_collector_test.dart  dart_map_debug_files_collector_test.dart  dart_map_discovery_test.dart  dart_map_uploader_test.dart  dart_symbol_map_debug_files_collector_test.dart  dart_symbol_map_integration_test.dart  dart_symbol_map_test.dart  dart_symbol_map_uploader_test.dart  flutter_debug_files_test.dart  flutter_debug_files_warning_test.dart  integration_test.dart  parent_dir_depth.dart  plugin_test.dart  plugin_test_legacy.dart  telemetry_test.dart  test-server.py
(+53 files in other folders)
